--- a/index.html
+++ b/index.html
@@ -8,10 +8,30 @@
 </head>
 <body>
     <div class="bg">
-        <div class="greenbg">
-            <div class="redbox"></div>
-            <div class="bluebox"></div>
-            <div class="blackbox"></div>
+        <div class="container">
+            
+            <div class="outputScreen"></div>
+
+            <div class="buttonContainer">
+                <div class="button1"></div>
+                <div class="button2"></div>
+                <div class="button3"></div>
+                <div class="button4"></div>
+                <div class="button5"></div>
+                <div class="button6"></div>
+                <div class="button7"></div>
+                <div class="button8"></div>
+                <div class="button9"></div>
+                <div class="button10"></div>
+                <div class="button11"></div>
+                <div class="button12"></div>
+                <div class="button13"></div>
+                <div class="button14"></div>
+                <div class="button15"></div>
+                <div class="button16"></div>
+            </div>
+
+            </div>
         </div>
     </div>
     
