--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/38dcd856c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="bg">
@@ -13,22 +14,22 @@
             <div class="outputScreen"></div>
 
             <div class="buttonContainer">
-                <div class="button1"></div>
-                <div class="button2"></div>
-                <div class="button3"></div>
-                <div class="button4"></div>
-                <div class="button5"></div>
-                <div class="button6"></div>
-                <div class="button7"></div>
-                <div class="button8"></div>
-                <div class="button9"></div>
-                <div class="button10"></div>
-                <div class="button11"></div>
-                <div class="button12"></div>
-                <div class="button13"></div>
-                <div class="button14"></div>
-                <div class="button15"></div>
-                <div class="button16"></div>
+                <div class="button1"><i class="fa-solid fa-1"></i></div>
+                <div class="button2"><i class="fa-solid fa-2"></i></div>
+                <div class="button3"><i class="fa-solid fa-3"></i></div>
+                <div class="button4"><div class="inner"><i class="fa-solid fa-divide"></i></div></div>
+                <div class="button5"><i class="fa-solid fa-4"></i></div>
+                <div class="button6"><i class="fa-solid fa-5"></i></div>
+                <div class="button7"><i class="fa-solid fa-6"></i></div>
+                <div class="button8"><div class="inner"><i class="fa-solid fa-xmark"></i></div></div>
+                <div class="button9"><i class="fa-solid fa-7"></i></div>
+                <div class="button10"><i class="fa-solid fa-8"></i></div>
+                <div class="button11"><i class="fa-solid fa-9"></i></div>
+                <div class="button12"><div class="inner"><i class="fa-solid fa-minus"></i></div></div>
+                <div class="button13"><div class="inner"><i class="fa-solid fa-c"></i></div></div>
+                <div class="button14"><i class="fa-solid fa-0"></i></div>
+                <div class="button15"><div class="inner"><i class="fa-solid fa-equals"></i></div></div>
+                <div class="button16"><div class="inner"><i class="fa-solid fa-plus"></i></div></div>
             </div>
 
             </div>
