--- a/index.html
+++ b/index.html
@@ -6,30 +6,33 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/38dcd856c7.js" crossorigin="anonymous"></script>
+    <script src="easy.js" defer></script>
+    
 </head>
 <body>
     <div class="bg">
         <div class="container">
             
-            <div class="outputScreen"></div>
+            <input id="outputScreen" disabled value="0" readonly>
 
             <div class="buttonContainer">
-                <div class="button1"><i class="fa-solid fa-1"></i></div>
-                <div class="button2"><i class="fa-solid fa-2"></i></div>
-                <div class="button3"><i class="fa-solid fa-3"></i></div>
-                <div class="button4"><div class="inner"><i class="fa-solid fa-divide"></i></div></div>
-                <div class="button5"><i class="fa-solid fa-4"></i></div>
-                <div class="button6"><i class="fa-solid fa-5"></i></div>
-                <div class="button7"><i class="fa-solid fa-6"></i></div>
-                <div class="button8"><div class="inner"><i class="fa-solid fa-xmark"></i></div></div>
-                <div class="button9"><i class="fa-solid fa-7"></i></div>
-                <div class="button10"><i class="fa-solid fa-8"></i></div>
-                <div class="button11"><i class="fa-solid fa-9"></i></div>
-                <div class="button12"><div class="inner"><i class="fa-solid fa-minus"></i></div></div>
-                <div class="button13"><div class="inner"><i class="fa-solid fa-c"></i></div></div>
-                <div class="button14"><i class="fa-solid fa-0"></i></div>
-                <div class="button15"><div class="inner"><i class="fa-solid fa-equals"></i></div></div>
-                <div class="button16"><div class="inner"><i class="fa-solid fa-plus"></i></div></div>
+
+                    <button onclick="showOnScreen('7')">7</button>
+                    <button onclick="showOnScreen('8')">8</button>
+                    <button onclick="showOnScreen('9')">9</button>
+                    <button class="operation" onclick="showOnScreen('/')"><div class="inner">&divide;</div></button>
+                    <button onclick="showOnScreen('4')">4</button>
+                    <button onclick="showOnScreen('5')">5</button>
+                    <button onclick="showOnScreen('6')">6</button>
+                    <button class="operation" onclick="showOnScreen('*')"><div class="inner">&times;</div></button>
+                    <button onclick="showOnScreen('1')">1</button>
+                    <button onclick="showOnScreen('2')">2</button>
+                    <button onclick="showOnScreen('3')">3</button>
+                    <button class="operation" onclick="showOnScreen('-')"><div class="inner">-</div></button>
+                    <button class="operation" onclick="clearing()"><div class="inner">C</div></button>
+                    <button onclick="showOnScreen('0')">0</button>
+                    <button class="operation" onclick="calculate()"><div class="inner">=</div></button>
+                    <button class="operation" onclick="showOnScreen('+')"><div class="inner">&plus;</div></button>
             </div>
 
             </div>
