--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.7.0/math.min.js"></script>
 </head>
 <body>
     <div class="bg">
